--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa-solid fa-envelope"></i></span>
-                        <span class="text">kurellagowthami5@gmail.com</span>
+                        <span class="text">kurellagowthami02@gmail.com</span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa-solid fa-earth-americas"></i></span>
@@ -38,7 +38,7 @@
                     </li>
                     <li>
                         <span class="icon"><i class="fa-brands fa-linkedin"></i></span>
-                        <span class="text"><a href="https://linkedin.com/in/yourprofile" target="_blank">Naukari</a></span>
+                        <span class="text"><a href="https://linkedin.com/in/yourprofile" target="_blank">Linkedln</a></span>
                     </li>
                     <li>
                         <span class="icon"><i class="fa-solid fa-location-dot"></i></span>
@@ -92,9 +92,9 @@
                 </div>
                 <div class="project">
                     <h3>Project</h3>
-                    <a href ="https://github.com/kurellagowthami/RESUME.git">Git hub </a><br>
-                    <a href ="#">Exploratory Data Analysis (EDA) project </a>
-                    <a href ="#">eCommerce website project</a>
+                    <a href ="https://github.com/kurellagowthami/RESUME.git">RESUME </a><br>
+                    <a href ="https://github.com/kurellagowthami/Google-play-store_Analysis">Exploratory Data Analysis (EDA) project </a>
+            
 
 
                 </div>
